--- a/src/app/components/cell/cell.component.scss
+++ b/src/app/components/cell/cell.component.scss
@@ -20,4 +20,12 @@
   &.highlight {
     background: linear-gradient(to bottom right, #d4ed81, #7da153);
   }
+
+  .cell-image {
+    filter: brightness(0) saturate(100%) invert(44%) sepia(94%) saturate(4953%) hue-rotate(95deg) brightness(98%) contrast(105%);
+    pointer-events: none;
+    width: 50px; 
+    height: 50px;
+  }
+  
 }
