--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,10 +4,12 @@
   align-items: center; 
   justify-content: center; 
   background: linear-gradient(to bottom right, #FEFAE0, #ebc498); 
+  min-width: 100vw;
   min-height: 100vh;
-  min-width: 100vh;
+  overflow-x: hidden; 
+  
   h1 {
-      font-size: 2.5rem;
+      font-size: clamp(1.5rem, 5vw, 2.5rem);
       font-family: 'Times New Roman', serif;
       margin-bottom: 20px;
       color: #283618; 
