--- a/src/app/components/board/board.component.scss
+++ b/src/app/components/board/board.component.scss
@@ -1,13 +1,17 @@
 .board {
   display: grid;
   background-color: #ffffff;
-  width: fit-content;
-  border: 8px solid #BC6C25; 
+  width: 90vw; 
+  max-width: 500px;
+  aspect-ratio: 1;
+
+  border: 8px solid #BC6C25;
   border-radius: 15px;
 
-  grid-template-columns: repeat(10, 50px);
-  grid-template-rows: repeat(10, 50px);
+  grid-template-columns: repeat(10, 10%);
+  grid-template-rows: repeat(10, 10%);
 }
+
 .result-window {
   display: flex;
   justify-content: space-between;;
@@ -16,13 +20,13 @@
 }
 
 .result {
-  font-size: 24px;
+  font-size: clamp(1rem, 5vw, 1.5rem);
   font-weight: bold;
   color: #283618;
 }
 
 .move-count {
-  font-size: 24px;
+  font-size: clamp(1rem, 5vw, 1.5rem);
   font-weight: bold;
   color: #283618;
 }
