--- a/src/app/components/cell/cell.component.scss
+++ b/src/app/components/cell/cell.component.scss
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative; // Add this to position the SVG absolutely within the cell
-  width: 50px;
-  height: 50px;
-  font-size: 1.25rem;
+  width: 100%;
+  height:  100%;
+  max-width: 50px;
+  max-height: 50px;
+  font-size: clamp(12px, 1.5vw, 20px);
   font-weight: bold;
   color: #283618;
 
@@ -24,8 +25,8 @@
   .cell-image {
     filter: brightness(0) saturate(100%) invert(44%) sepia(94%) saturate(4953%) hue-rotate(95deg) brightness(98%) contrast(105%);
     pointer-events: none;
-    width: 50px; 
-    height: 50px;
+    width: 80%; 
+    height: 80%;
   }
   
 }
