--- a/src/app/components/game-controls/game-controls.component.scss
+++ b/src/app/components/game-controls/game-controls.component.scss
@@ -1,17 +1,26 @@
 button {
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 10px 20px;
-    margin-top: 20px;
-    cursor: pointer;
-    background-color: #DDA15E;
-    color: #FEFAE0;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-  
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  background-color: #DDA15E;
+  color: #FEFAE0;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #555;
+  }
+
+  &:active {
+    background-color: #333; 
+  }
+
+  @media (hover: none) {
     &:hover {
-      background-color: #555;
+      background-color: #DDA15E; 
     }
   }
-  
+}
